--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:test": "NODE_ENV=test node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "start-react": "react-scripts start",
     "build-react": "react-scripts build",
     "test-react": "react-scripts test",
-    "eject-react": "react-scripts eject"
+    "eject-react": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "author": "evusr1",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -23,12 +27,14 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^8.36.0",
-    "nodemon": "^2.0.21",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "cypress": "^12.14.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
