--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,5 @@ jobs:
           command: npm run test:e2e
           start: npm run start:test
           wait-on: http://localhost:3001
+        env:
+            TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
