--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,4 @@ jobs:
           wait-on: http://localhost:3001
         env:
             TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+            PORT: 3001
