--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "start:test": "NODE_ENV=test node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --verbose",
     "lint": "eslint .",
     "start-react": "react-scripts start",
     "build-react": "react-scripts build",
@@ -27,17 +27,16 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "cypress": "^12.14.0",
     "eslint": "^8.36.0",
     "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-jest": "^27.2.1",
     "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "supertest": "^6.3.3",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:3001",
@@ -58,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
   }
 }
