--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.15",
     "axios": "^1.3.4",
     "cypress": "^12.14.0",
     "eslint": "^8.36.0",
