--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,13 @@ jobs:
         env:
             TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
             PORT: 3001
+      - name: Checks Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+            severity: error
+            details:  Lint, Testing, and Build Failed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   deploy:
     needs: [simple_deployment_pipeline]
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ''), '#skip') }}
@@ -51,6 +58,21 @@ jobs:
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Checks and Deploy Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+            severity: info
+            details:  Lint, Testing, Build and Deployment Successful
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Checks Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+            severity: error
+            details:  Deploy failed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
   tag_release:
     if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ''), '#skip') }}
     name: Version Bump
